fixed 4px overflow

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -17,6 +17,10 @@ html, body {
   color: #ECF0F1;
 }
 
+canvas {
+  display: block;
+}
+
 html, body, input {
   font-family: 'Roboto', times;
   font-weight: 300;
